--- a/Lab6/Views/Specialities/Index.cshtml
+++ b/Lab6/Views/Specialities/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Person>
+@model IEnumerable<Specialty>
 
 @{
 	ViewData["Title"] = "Index";
@@ -16,12 +16,6 @@
 		<th>
 			@Html.DisplayNameFor(model => model.Name)
 		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Surname)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Middlename)
-		</th>
 		<th></th>
 	</tr>
 	</thead>
@@ -31,12 +25,6 @@
 		<tr>
 			<td>
 				@Html.DisplayFor(modelItem => item.Name)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Surname)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Middlename)
 			</td>
 			<td>
 				<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
