--- a/Lab6/Views/_ViewImports.cshtml
+++ b/Lab6/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Lab6
+@using Lab6.ViewModels
+@using Lab6.ViewModels.Home
+@using Lab6.ViewModels.Persons
 @using System.Threading.Tasks
 @using Lab6.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
